   user with the green edit frame [jensens]
   
 * Added a new class ATCTFileContent which contains some code for ATFile
   and ATImage [tiran]
   
 * Set title from the filename of an uploaded file (ATImage, ATFile) [tiran]
 
 * Added limit for ATTopic [gotcha]
 
 * Added EditableBody method to ATDocument [tiran]

 * Added validation of Criterion support for a specific index [gotcha]

0.2-beta5

 * Fixed multiple small bugs and added features requested in the bug
   tracker on sf.net [tiran]
 
 * Auto set id from filename for ATImage and ATFile
 
 * Fixed python 2.1 compatibility problem with CMFCore/WorkflowTool. Thx to
   Tiziano Lattisi [tiran]

 * Moved to validation chains [tiran]
 
 * Fixed security of HistoryAwareMixin [tiran]
 
 * Added iCal/vCal export to AT Event [tiran]
  
 * Added PloneLingua support [gotcha]

0.2-beta4

 * Added AT Dyn Document. It's a CMFDynamicDocument like type that supports
   rendering of TAL inside the body text.
   [tiran]

 * Moved AT Dyn Document to a new product [tiran]

 * Fixed the migration [tiran]
 
 * Fixed and improved the switch from/to "ATCT as default types" methods [tiran]
 
 * Updated docs [tiran]
 
 * Moved helper methods to utils [tiran]
 
 * Switch objects in content_type_registry, too [lelit]
  
 * Added isSwitchedToATCT method [tiran]
 
 * Fixed misc UI problems like doubled folderContents [tiran]
 
0.2-beta3 - 2004-04-20

 * Updated INSTALL.txt [tiran]

 * Fixed default view of ATBTreeFolder and ATFolder (stage 2)
   Both types are using ATContentTypeSchema with TemplateMixinSchema
  [tiran]

 * Added a recreateATImageScales method as external method [tiran]

 * Added missing sharing tab to all ATCTContent based types [tiran]

 * Fixed AT Favorite [jensens]

 * Fixed atct_edit macro [tiran]

0.2-beta2 - 2004-04-11

 * Update validators to reflect the last changes and fixes of the archetypes and
   validation packages. [tiran]
   
 * Added uml diagram of ATCT classes [tiran]
