@@ -16,6 +16,8 @@
 
  * Added validation of Criterion support for a specific index [gotcha]
 
+ * Added edit() methods for backward compatibility to CMF 
+
 0.2-beta5
 
  * Fixed multiple small bugs and added features requested in the bug
